fix overflowing dropdown menu in secondary-sidebar

--- a/app/assets/stylesheets/tylium/modules/_secondary_sidebar.scss
+++ b/app/assets/stylesheets/tylium/modules/_secondary_sidebar.scss
@@ -68,6 +68,9 @@
 
           .dropdown-item {
             color: $linkColor;
+            max-width: 180px;
+            overflow: hidden;
+            text-overflow: ellipsis;
       
             &:active,
             &:hover {
